Connect dashboard to real database - orders chart, calendar events, and announcements

--- a/client/admin.html
+++ b/client/admin.html
@@ -87,33 +87,14 @@
             <div class="card announcements-card">
                 <h2>Announcements</h2>
                 <div class="announcement-list">
-                    <div class="announcement-item">
-                        <div class="item-header">
-                            <h3>Opening of Classes</h3>
-                            <span>July 27, 10:23 AM</span>
-                        </div>
-                        <p>Opening of classes will be on August 3</p>
-                    </div>
-                    <div class="announcement-item">
-                        <div class="item-header">
-                            <h3>Upcoming August Event</h3>
-                            <span>May 27, 10:23 AM</span>
-                        </div>
-                        <p>COC Parangal will be on June 4</p>
-                    </div>
-                    <div class="announcement-item">
-                         <div class="item-header">
-                            <h3>Claiming of Orders</h3>
-                            <span>Jan 17, 10:23 AM</span>
-                        </div>
-                        <p>Orders can be claim in the COCSC Officer during vacant hours</p>
-                    </div>
+                    <!-- Will be populated by JS -->
                 </div>
             </div>
         </main>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="config.js"></script>
     <script src="adminDashboard.js"></script>
 </body>
 </html>
