--- a/client/receipt.html
+++ b/client/receipt.html
@@ -69,6 +69,13 @@
                 </div>
             </div>
 
+            <div class="payment-proof" id="payment-proof-section" style="display: none;">
+                <h3>Payment Proof (GCash Receipt)</h3>
+                <div class="payment-proof-image">
+                    <img id="gcash-receipt" src="" alt="GCash Payment Receipt" />
+                </div>
+            </div>
+
             <div class="order-items">
                 <h3>Item Description</h3>
                 <table class="items-table">
