Replace calendar with events list in admin dashboard

--- a/client/admin.html
+++ b/client/admin.html
@@ -56,23 +56,9 @@
                 </div>
             </div>
 
-            <div class="card calendar-card">
-                <h2>Calendars</h2>
-                <div class="calendar-header">
-                    <button id="prev-month" class="calendar-nav"><</button>
-                    <h3 id="month-year">June 2025</h3>
-                    <button id="next-month" class="calendar-nav">></button>
-                </div>
-                <div class="calendar-grid">
-                    <div class="day-name">Mo</div>
-                    <div class="day-name">Tu</div>
-                    <div class="day-name">We</div>
-                    <div class="day-name">Th</div>
-                    <div class="day-name">Fr</div>
-                    <div class="day-name">Sa</div>
-                    <div class="day-name">Su</div>
-                </div>
-                <div class="calendar-grid" id="calendar-days">
+            <div class="card events-card">
+                <h2>Upcoming Events</h2>
+                <div class="events-list">
                     <!-- JS will populate this -->
                 </div>
             </div>
