--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>College of Communications</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
@@ -17,36 +17,36 @@
     <!-- ======================= -->
     <!--          HEADER         -->
     <!-- ======================= -->
-     <header>
+     <header role="banner">
         <div class="container">
-            <a href="#" class="logo">
-                <img src="assets/coc.png" alt="College Logo"> 
+            <a href="#" class="logo" aria-label="College of Communications Home">
+                <img src="assets/coc.png" alt="College of Communications Logo"> 
             </a>
-            <nav class="desktop-nav">
-                <ul>
-                    <li><a href="index.html" class="active">HOME</a></li>
-                    <li><a href="order.html">ORDER</a></li>
-                    <li><a href="aboutUs.html">ABOUT US</a></li>
+            <nav class="desktop-nav" aria-label="Main navigation">
+                <ul role="menubar">
+                    <li role="none"><a href="index.html" class="active" role="menuitem" aria-current="page">HOME</a></li>
+                    <li role="none"><a href="order.html" role="menuitem">ORDER</a></li>
+                    <li role="none"><a href="aboutUs.html" role="menuitem">ABOUT US</a></li>
                 </ul>
             </nav>
             <!-- ADDED: Hamburger Menu Button -->
-            <button class="hamburger" id="hamburger-btn">
-                <i class="fa-solid fa-bars"></i>
+            <button class="hamburger" id="hamburger-btn" aria-label="Open mobile menu" aria-expanded="false">
+                <i class="fa-solid fa-bars" aria-hidden="true"></i>
             </button>
         </div>
     </header>
 
     <!-- ADDED: Mobile Navigation Menu -->
-    <div class="mobile-nav" id="mobile-nav">
-        <ul>
-            <li><a href="index.html" class="active">HOME</a></li>
-            <li class="mobile-dropdown">
-                <a href="#" class="mobile-dropdown-toggle">SERVICES <i class="fa-solid fa-chevron-down"></i></a>
-                <ul class="mobile-dropdown-menu">
-                    <li><a href="order.html">ORDER</a></li>
+    <div class="mobile-nav" id="mobile-nav" role="navigation" aria-label="Mobile navigation">
+        <ul role="menu">
+            <li role="none"><a href="index.html" class="active" role="menuitem" aria-current="page">HOME</a></li>
+            <li class="mobile-dropdown" role="none">
+                <a href="#" class="mobile-dropdown-toggle" role="menuitem" aria-haspopup="true" aria-expanded="false">SERVICES <i class="fa-solid fa-chevron-down" aria-hidden="true"></i></a>
+                <ul class="mobile-dropdown-menu" role="menu">
+                    <li role="none"><a href="order.html" role="menuitem">ORDER</a></li>
                 </ul>
             </li>
-            <li><a href="aboutUs.html">ABOUT US</a></li>
+            <li role="none"><a href="aboutUs.html" role="menuitem">ABOUT US</a></li>
         </ul>
     </div>
 
@@ -54,13 +54,13 @@
     <!-- ======================= -->
     <!--       HERO BANNER       -->
     <!-- ======================= -->
-    <section class="hero">
+    <section class="hero" role="banner" aria-label="Welcome section">
     <div class="container">
         <div class="hero-content">
             <p class="hero-tagline">THE VOICE OF THE UNIVERSITY</p>
             <h1>College of Communications</h1>
             <p class="hero-description">Empowering voices, shaping stories, and building the future of media and communication excellence.</p>
-          <a href="https://www.facebook.com/wvsucoc" class="btn-apply-now">Apply Now</a>
+          <a href="https://www.facebook.com/wvsucoc" class="btn-apply-now" aria-label="Apply now on Facebook" target="_blank" rel="noopener noreferrer">Apply Now</a>
         </div>
     </div>
     </section>
@@ -69,35 +69,35 @@
     <!-- ======================= -->
     <!-- ANNOUNCEMENTS & CALENDAR -->
     <!-- ======================= -->
-    <section class="info-section container">
+    <section class="info-section container" aria-label="Announcements and calendar">
         <div class="announcements-wrapper">
-            <div class="announcements">
-                <h2 class="section-title">Announcements</h2>
-                <div id="announcements-container">
+            <div class="announcements" role="region" aria-labelledby="announcements-title">
+                <h2 id="announcements-title" class="section-title">Announcements</h2>
+                <div id="announcements-container" role="list">
                     <!-- JS will load announcements here -->
                 </div>
             </div>
         </div>
 
-        <div id="event-modal" class="modal-backdrop hidden">
+        <div id="event-modal" class="modal-backdrop hidden" role="dialog" aria-modal="true" aria-labelledby="event-modal-title">
             <div class="modal-content">
-                <button id="event-modal-close-btn" class="modal-close-btn">×</button>
+                <button id="event-modal-close-btn" class="modal-close-btn" aria-label="Close modal">×</button>
                 <h2 id="event-modal-title">Event Title</h2>
                 <p id="event-modal-description">Event description goes here.</p>
             </div>
         </div>
 
         <div class="calendar-wrapper">
-            <div class="calendar">
+            <div class="calendar" role="region" aria-labelledby="calendar-title">
                 <div class="calendar-header">
-                    <span class="arrow" id="prev-month-btn"><</span>
-                    <h3 id="month-year-header">June 2025</h3>
-                    <span class="arrow" id="next-month-btn">></span>
+                    <button class="arrow" id="prev-month-btn" aria-label="Previous month"><</button>
+                    <h3 id="calendar-title" id="month-year-header">June 2025</h3>
+                    <button class="arrow" id="next-month-btn" aria-label="Next month">></button>
                 </div>
-                <div class="calendar-weekdays">
-                    <div>Mo</div><div>Tu</div><div>We</div><div>Th</div><div>Fr</div><div>Sa</div><div>Su</div>
+                <div class="calendar-weekdays" role="row">
+                    <div role="columnheader">Mo</div><div role="columnheader">Tu</div><div role="columnheader">We</div><div role="columnheader">Th</div><div role="columnheader">Fr</div><div role="columnheader">Sa</div><div role="columnheader">Su</div>
                 </div>
-                <div class="calendar-grid" id="calendar-grid">
+                <div class="calendar-grid" id="calendar-grid" role="grid" aria-label="Calendar days">
                     <!-- JS will generate calendar days here -->
                 </div>
                 <div class="calendar-legend">
@@ -114,8 +114,8 @@
     <!-- ======================= -->
     <!--  STUDENT ORGANIZATIONS  -->
     <!-- ======================= -->
-    <section id="organizations" class="organizations container">
-        <h2>Student Organizations</h2>
+    <section id="organizations" class="organizations container" role="region" aria-labelledby="organizations-title">
+        <h2 id="organizations-title">Student Organizations</h2>
         <div class="org-grid">
             <!-- Card 1 -->
             <div class="org-card">
@@ -232,9 +232,9 @@
             <div class="footer-social">
                 <h3>Social Media</h3>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/wvsucocsc" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.facebook.com/wvsucoc" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/wvsucocsc/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/wvsucocsc" target="_blank" rel="noopener noreferrer" aria-label="Visit COCSC Facebook page"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/wvsucoc" target="_blank" rel="noopener noreferrer" aria-label="Visit COC Facebook page"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/wvsucocsc/" target="_blank" rel="noopener noreferrer" aria-label="Visit COCSC Instagram page"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
             
@@ -253,15 +253,15 @@
     <!-- ======================= -->
     <!--  MODALS & TOOLTIPS      -->
     <!-- ======================= -->
-    <div id="announcement-modal" class="modal-backdrop hidden">
+    <div id="announcement-modal" class="modal-backdrop hidden" role="dialog" aria-modal="true" aria-labelledby="modal-title">
         <div class="modal-content">
-            <button class="modal-close-btn">×</button>
+            <button class="modal-close-btn" aria-label="Close announcement">×</button>
             <h2 id="modal-title">Modal Title</h2>
             <p id="modal-body">Modal body text goes here.</p>
         </div>
     </div>
 
-    <div id="event-tooltip" class="tooltip hidden">
+    <div id="event-tooltip" class="tooltip hidden" role="tooltip">
         <h4 id="tooltip-title"></h4>
         <p id="tooltip-description"></p>
     </div>
