Fix calendar grid rendering and footer responsive layout issues

--- a/client/index.html
+++ b/client/index.html
@@ -88,10 +88,10 @@
         </div>
 
         <div class="calendar-wrapper">
-            <div class="calendar" role="region" aria-labelledby="calendar-title">
+            <div class="calendar" role="region" aria-labelledby="month-year-header">
                 <div class="calendar-header">
                     <button class="arrow" id="prev-month-btn" aria-label="Previous month"><</button>
-                    <h3 id="calendar-title" id="month-year-header">June 2025</h3>
+                    <h3 id="month-year-header">June 2025</h3>
                     <button class="arrow" id="next-month-btn" aria-label="Next month">></button>
                 </div>
                 <div class="calendar-weekdays" role="row">
