fix: box width for announcements and events, and footer

--- a/client/order.html
+++ b/client/order.html
@@ -7,7 +7,7 @@
     <title>Order</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
@@ -201,9 +201,9 @@
             <div class="footer-social">
                 <h3>Social Media</h3>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/wvsucocsc" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.facebook.com/wvsucoc" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/wvsucocsc/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/wvsucocsc" target="_blank" rel="noopener noreferrer" aria-label="Visit COCSC Facebook page"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/wvsucoc" target="_blank" rel="noopener noreferrer" aria-label="Visit COC Facebook page"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/wvsucocsc/" target="_blank" rel="noopener noreferrer" aria-label="Visit COCSC Instagram page"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
                 </div>
             </div>
             
