--- a/client/order.html
+++ b/client/order.html
@@ -70,35 +70,35 @@
                 </div>
                 <div class="merchandise-grid">
                     <div class="product-item" data-id="1" data-name="COC Type B Uniform" data-price="550" data-img-src="https://i.imgur.com/3qL6s9z.png">
-                        <img src="https://i.imgur.com/3qL6s9z.png" alt="COC Type B Uniform">
+                        <img src="https://i.imgur.com/3qL6s9z.png" alt="COC Type B Uniform" onerror="this.style.display='none'; this.parentElement.classList.add('image-error');">
                         <div class="product-info-text">
                             <h3>COC Type B Uniform</h3>
                             <p>₱ 550</p>
                         </div>
                     </div>
                     <div class="product-item" data-id="2" data-name="COC Type C Uniform" data-price="550" data-img-src="https://i.imgur.com/OykO2aO.png">
-                        <img src="https://i.imgur.com/OykO2aO.png" alt="COC Type C Uniform">
+                        <img src="https://i.imgur.com/OykO2aO.png" alt="COC Type C Uniform" onerror="this.style.display='none'; this.parentElement.classList.add('image-error');">
                         <div class="product-info-text">
                             <h3>COC Type C Uniform</h3>
                             <p>₱ 550</p>
                         </div>
                     </div>
                     <div class="product-item" data-id="3" data-name="COC Nameplate" data-price="700" data-img-src="https://i.imgur.com/1RO9505.png">
-                        <img src="https://i.imgur.com/1RO9505.png" alt="COC Nameplate">
+                        <img src="https://i.imgur.com/1RO9505.png" alt="COC Nameplate" onerror="this.style.display='none'; this.parentElement.classList.add('image-error');">
                         <div class="product-info-text">
                             <h3>COC Nameplate</h3>
                             <p>₱ 700</p>
                         </div>
                     </div>
-                     <div class="product-item" data-id="4" data-name="COC Lanyard" data-price="120" data-img-src="https://i.imgur.com/1RO9505.png">
-                        <img src="https://i.imgur.com/1RO9505.png" alt="COC Lanyard">
+                    <div class="product-item" data-id="4" data-name="COC Lanyard" data-price="120" data-img-src="https://i.imgur.com/1RO9505.png">
+                        <img src="https://i.imgur.com/1RO9505.png" alt="COC Lanyard" onerror="this.style.display='none'; this.parentElement.classList.add('image-error');">
                         <div class="product-info-text">
                             <h3>COC Lanyard</h3>
                             <p>₱ 120</p>
                         </div>
                     </div>
                 </div>
-                <div class="pagination">
+                <div class="pagination" style="display: none;">
                     <button id="scroll-left-btn"><</button>
                     <button id="scroll-right-btn">></button>
                 </div>
