fixed nameplate naming and type b naming

--- a/client/order.html
+++ b/client/order.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="merchandise-grid">
-                    <div class="product-item" data-id="1" data-name="COC Type B Uniform" data-price="550" data-img-src="https://i.imgur.com/3qL6s9z.png">
+                    <div class="product-item" data-id="1" data-name="COC Type B Uniform" data-price="550" data-img-src="https://i.imgur.com/3qL6s9z.png" data-requires-name="true">
                         <img src="https://i.imgur.com/3qL6s9z.png" alt="COC Type B Uniform" onerror="this.style.display='none'; this.parentElement.classList.add('image-error');">
                         <div class="product-info-text">
                             <h3>COC Type B Uniform</h3>
@@ -128,9 +128,9 @@
                             <button>XL</button>
                             <button>2XL</button>
                         </div>
-                         <div class="name-template-input" style="display: none;">
-                            <label for="template-name">Template Name</label>
-                            <input type="text" id="template-name" placeholder="Enter Complete Name (LN, FN MI.)">
+                        <div class="name-input-field" id="name-input-field" style="display: none;">
+                            <label for="uniform-name">Name for Uniform</label>
+                            <input type="text" id="uniform-name" placeholder="Enter full name (e.g., DELA CRUZ, JUAN A.)">
                         </div>
                     </div>
                     <div class="quantity">
