added admin responsiveness

--- a/client/adminOrder.html
+++ b/client/adminOrder.html
@@ -69,6 +69,7 @@
                                 <th>Payment Method</th>
                                 <th>Total Amount</th>
                                 <th>Order Number</th>
+                                <th>Order Time</th>
                                 <th class="editable">Payment Status</th>
                                 <th class="editable">Status</th>
                                 <th>Actions</th>
