--- a/client/order.html
+++ b/client/order.html
@@ -128,6 +128,10 @@
                             <button>XL</button>
                             <button>2XL</button>
                         </div>
+                        <div class="name-template-input" id="name-template-input" style="display: none;">
+                            <label for="template-name">Name for Nameplate</label>
+                            <input type="text" id="template-name" placeholder="Enter name for nameplate">
+                        </div>
                         <div class="name-input-field" id="name-input-field" style="display: none;">
                             <label for="uniform-name">Name for Uniform</label>
                             <input type="text" id="uniform-name" placeholder="Enter full name (e.g., DELA CRUZ, JUAN A.)">
