fixing data storing in admin panel

--- a/client/order.html
+++ b/client/order.html
@@ -129,12 +129,12 @@
                             <button>2XL</button>
                         </div>
                         <div class="name-template-input" id="name-template-input" style="display: none;">
-                            <label for="template-name">Name for Nameplate</label>
+                            <label for="template-name">Name for Nameplate (e.g., CHRISINE ELIJAH F. PORRAS)</label>
                             <input type="text" id="template-name" placeholder="Enter name for nameplate">
                         </div>
                         <div class="name-input-field" id="name-input-field" style="display: none;">
-                            <label for="uniform-name">Name for Uniform</label>
-                            <input type="text" id="uniform-name" placeholder="Enter full name (e.g., DELA CRUZ, JUAN A.)">
+                            <label for="uniform-name">Name for Type B</label>
+                            <input type="text" id="uniform-name" placeholder="Enter full name (e.g., PORRAS, C.E. F.)">
                         </div>
                     </div>
                     <div class="quantity">
