--- a/client/order.html
+++ b/client/order.html
@@ -129,8 +129,8 @@
                             <button>2XL</button>
                         </div>
                         <div class="name-template-input" id="name-template-input" style="display: none;">
-                            <label for="template-name">Name for Nameplate (e.g., CHRISINE ELIJAH F. PORRAS)</label>
-                            <input type="text" id="template-name" placeholder="Enter name for nameplate">
+                            <label for="template-name">Name for Nameplate</label>
+                            <input type="text" id="template-name" placeholder="Enter name for nameplate (e.g., CHRISINE ELIJAH F. PORRAS)">
                         </div>
                         <div class="name-input-field" id="name-input-field" style="display: none;">
                             <label for="uniform-name">Name for Type B</label>
