--- a/client/adminOrder.html
+++ b/client/adminOrder.html
@@ -15,6 +15,7 @@
         <!--        SIDEBAR          -->
         <!-- ======================= -->
        <aside class="sidebar">
+            <button class="hamburger-btn" aria-label="Toggle menu">☰</button>
             <h1 class="sidebar-title">Hi, Admin!</h1>
             <nav class="sidebar-nav">
                 <ul>
