--- a/client/order.html
+++ b/client/order.html
@@ -130,11 +130,11 @@
                         </div>
                         <div class="name-template-input" id="name-template-input" style="display: none;">
                             <label for="template-name">Name for Nameplate</label>
-                            <input type="text" id="template-name" placeholder="Enter name for nameplate (e.g., CHRISINE ELIJAH F. PORRAS)">
+                            <input type="text" id="template-name" placeholder="e.g., CHRISINE ELIJAH F. PORRAS">
                         </div>
                         <div class="name-input-field" id="name-input-field" style="display: none;">
                             <label for="uniform-name">Name for Type B</label>
-                            <input type="text" id="uniform-name" placeholder="Enter full name (e.g., PORRAS, C.E. F.)">
+                            <input type="text" id="uniform-name" placeholder="e.g., PORRAS, C.E. F.">
                         </div>
                     </div>
                     <div class="quantity">
