added size guides

--- a/client/index.html
+++ b/client/index.html
@@ -151,10 +151,7 @@
                 <div class="org-content">
                     <img src="assets/journalist.png" alt="YJS Logo">
                      <div class="org-info">
-                        <p>Beberapa Foto Ketika</p>
-                        <p>Wisida Tahfidz Murid -</p>
-                        <p>Murid SMP Negeri 1</p>
-                        <p>Cibadak</p>
+                        <p>The Young Journalists’ Society (YJS) is the flagship student organization from the Journalism Division of the College of Communication that is committed in providing opportunities for communication students to engage, learn, and lead.</p>
                         <a href="#">Learn More</a>
                     </div>
                 </div>
