--- a/client/order.html
+++ b/client/order.html
@@ -74,25 +74,23 @@
                         <div class="product-info-text">
                             <h3>COC Type B Uniform</h3>
                             <p>₱ 600</p>
-                            <a href="#" class="size-guide-link" data-product="shirt"><i class="fa-solid fa-ruler"></i> Size Guide</a>
                         </div>
                     </div>
-                    <div class="product-item" data-id="2" data-name="COC Type C Uniform" data-price="550" data-img-src="https://i.imgur.com/OykO2aO.png">
+                    <div class="product-item" data-id="2" data-name="COC Type C Uniform" data-price="550" data-img-src="assets/typeC.png">
                         <img src="assets/typeC.png" alt="COC Type C Uniform" onerror="this.style.display='none'; this.parentElement.classList.add('image-error');">
                         <div class="product-info-text">
                             <h3>COC Type C Uniform</h3>
                             <p>₱ 550</p>
-                            <a href="#" class="size-guide-link" data-product="shirt"><i class="fa-solid fa-ruler"></i> Size Guide</a>
                         </div>
                     </div>
-                    <div class="product-item" data-id="3" data-name="COC Nameplate" data-price="700" data-img-src="https://i.imgur.com/1RO9505.png">
-                        <img src="https://i.imgur.com/1RO9505.png" alt="COC Nameplate" onerror="this.style.display='none'; this.parentElement.classList.add('image-error');">
+                    <div class="product-item" data-id="3" data-name="COC Nameplate" data-price="700" data-img-src="assets/nameplate.png">
+                        <img src="assets/nameplate.png" alt="COC Nameplate" onerror="this.src='https://i.imgur.com/1RO9505.png'; this.onerror=null;">
                         <div class="product-info-text">
                             <h3>COC Nameplate</h3>
                             <p>₱ 700</p>
                         </div>
                     </div>
-                    <div class="product-item" data-id="4" data-name="COC Lanyard" data-price="120" data-img-src="https://i.imgur.com/1RO9505.png">
+                    <div class="product-item" data-id="4" data-name="COC Lanyard" data-price="120" data-img-src="assets/lanyard.png">
                         <img src="assets/lanyard.png" alt="COC Lanyard" onerror="this.style.display='none'; this.parentElement.classList.add('image-error');">
                         <div class="product-info-text">
                             <h3>COC Lanyard</h3>
@@ -130,6 +128,7 @@
                             <button>XL</button>
                             <button>2XL</button>
                         </div>
+                        <a href="#" class="size-guide-link" id="modal-size-guide-link" style="display: none;"><i class="fa-solid fa-ruler"></i> View Size Guide</a>
                         <div class="name-template-input" id="name-template-input" style="display: none;">
                             <label for="template-name">Name for Nameplate</label>
                             <input type="text" id="template-name" placeholder="e.g., CHRISINE ELIJAH F. PORRAS">
