minor name changes for officers and currency

--- a/client/aboutUs.html
+++ b/client/aboutUs.html
@@ -91,15 +91,15 @@
                 <div class="officers-grid">
                     <div class="officer-row cols-2">
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Chairperson">
+                            <img src="assets/NANQUIL.png" alt="Chairperson">
                             <div class="officer-info">
                                 <h4>CHAIRPERSON</h4>
-                                <p class="name">Andong-Nanquil</p>
-                                <p class="nickname">Jeanne Michaela Andrionette</p>
+                                <p class="name">Nanquil</p>
+                                <p class="nickname">Jeanne Michaella Anthonette</p>
                             </div>
                         </div>
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Vice-Chairperson">
+                            <img src="assets/CERCADO.png" alt="Vice-Chairperson">
                              <div class="officer-info">
                                 <h4>VICE - CHAIRPERSON</h4>
                                 <p class="name">Cercado</p>
@@ -110,7 +110,7 @@
 
                     <div class="officer-row cols-4">
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Secretary">
+                            <img src="assets/SALVADOR.png" alt="Secretary">
                              <div class="officer-info">
                                 <h4>SECRETARY</h4>
                                 <p class="name">Salvador</p>
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Asst. Secretary">
+                            <img src="assets/ALACAPA.png" alt="Asst. Secretary">
                              <div class="officer-info">
                                 <h4>ASST. SECRETARY</h4>
                                 <p class="name">Alacapa</p>
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Treasurer">
+                            <img src="assets/SABLE.png" alt="Treasurer">
                              <div class="officer-info">
                                 <h4>TREASURER</h4>
                                 <p class="name">Sable</p>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Asst. Treasurer">
+                            <img src="assets/PLONDAYA.png" alt="Asst. Treasurer">
                              <div class="officer-info">
                                 <h4>ASST. TREASURER</h4>
                                 <p class="name">Plondaya</p>
@@ -145,7 +145,7 @@
 
                      <div class="officer-row cols-4">
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Auditor">
+                            <img src="assets/PALMA.png" alt="Auditor">
                              <div class="officer-info">
                                 <h4>AUDITOR</h4>
                                 <p class="name">Palma</p>
@@ -153,7 +153,7 @@
                             </div>
                         </div>
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Asst. Auditor">
+                            <img src="assets/SUPERIO.png" alt="Asst. Auditor">
                              <div class="officer-info">
                                 <h4>ASST. AUDITOR</h4>
                                 <p class="name">Superio</p>
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Business Manager">
+                            <img src="assets/PORRAS.jpg" alt="Business Manager">
                              <div class="officer-info">
                                 <h4>BUSINESS MANAGER</h4>
                                 <p class="name">Porras</p>
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Asst. Business Manager">
+                            <img src="assets/GURUNG.png" alt="Asst. Business Manager">
                              <div class="officer-info">
                                 <h4>ASST. BUSINESS MANAGER</h4>
                                 <p class="name">Gurung</p>
@@ -180,7 +180,7 @@
                     
                     <div class="officer-row cols-2">
                          <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="PIO">
+                            <img src="assets/SAPUL.O" alt="PIO">
                              <div class="officer-info">
                                 <h4>PIO</h4>
                                 <p class="name">Sapul</p>
@@ -188,7 +188,7 @@
                             </div>
                         </div>
                          <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Asst. PIO">
+                            <img src="assets/ESTIMAR.png" alt="Asst. PIO">
                              <div class="officer-info">
                                 <h4>ASST. PIO</h4>
                                 <p class="name">Estimar</p>
@@ -199,7 +199,7 @@
                     
                     <div class="officer-row cols-2">
                          <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="College Representative">
+                            <img src="assets/DELGADO.png" alt="College Representative">
                              <div class="officer-info">
                                 <h4>COLLEGE REPRESENTATIVE</h4>
                                 <p class="name">Delgado</p>
@@ -207,7 +207,7 @@
                             </div>
                         </div>
                          <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="College Representative">
+                            <img src="assets/CALANTAS.png" alt="College Representative">
                              <div class="officer-info">
                                 <h4>COLLEGE REPRESENTATIVE</h4>
                                 <p class="name">Calantas</p>
@@ -218,7 +218,7 @@
 
                     <div class="officer-row cols-1">
                         <div class="officer-card">
-                            <img src="https://i.imgur.com/gA5w4gM.png" alt="Adviser">
+                            <img src="assets/FUNTECHA.png" alt="Adviser">
                              <div class="officer-info">
                                 <h4>ADVISER</h4>
                                 <p class="name">Funtecha</p>
