--- a/client/checkout.html
+++ b/client/checkout.html
@@ -56,7 +56,7 @@
                     <div id="order-items-list"></div>
                     <div class="order-summary">
                         <p>No. of items: <span id="total-items">0</span></p>
-                        <p class="order-total">Total: <span id="order-total">€0</span></p>
+                        <p class="order-total">Total: <span id="order-total">₱0</span></p>
                     </div>
                 </div>
 
