minor changes to the footer and additional descriptions for the orgs

--- a/client/aboutUs.html
+++ b/client/aboutUs.html
@@ -70,12 +70,9 @@
         <section class="content-section">
             <div class="container">
                  <div class="content-box">
-                    <h3>Kung ano man trip nyo ilagay d2</h3>
+                    <h3>College of Communication Student Council</h3>
                     <ol>
-                        <li>100% Seluruh Guru/Staf memberikan pelayanan, keteladanan kepada para pengguna jasa dengan pendekatan agama, etika, dan budaya.</li>
-                        <li>100% Siswa melaksanakan ajaran agama, etika dan budaya baik di Sekolah maupun diluar.</li>
-                        <li>90% Fasilitas sekolah memdekati Standar Nasional Pendidikan (SNP).</li>
-                        <li>80% Siswa berprestasi baik ditingkat regional, nasional maupun Global.</li>
+                        <li>The College of Communication Student Council (COC SC) represents the College of - Communication students, advocating for their needs and rights. It fosters responsible - student engagement, provides a platform for student voices, champions academic freedom, strives for educational reform, promotes unity, and cultivates social awareness and national consciousness.</li>
                     </ol>
                 </div>
             </div>
@@ -250,8 +247,6 @@
                 <h3>Menu</h3>
                 <ul>
                     <li><a href="order.html">Orders</a></li>
-                    <li><a href="feedback.html">Feedback</a></li>
-                    <li><a href="processingLogs.html">Processing Logs</a></li>
                     <li><a href="aboutUs.html">About Us</a></li>
                 </ul>
             </div>
