--- a/client/index.html
+++ b/client/index.html
@@ -123,10 +123,7 @@
                 <div class="org-content">
                     <img src="assets/broadcasting.png" alt="Broadcast Guild Logo">
                     <div class="org-info">
-                        <p>Beberapa Foto Ketika</p>
-                        <p>Wisida Tahfidz Murid -</p>
-                        <p>Murid SMP Negeri 1</p>
-                        <p>Cibadak</p>
+                        <p>An organization in the College of Communication for Broadcasting Students. Organized to help and educate future media practitioners to be eloquent, effective, and critical communicators.</p>
                         <a href="#">Learn More</a>
                     </div>
                 </div>
@@ -137,10 +134,7 @@
                 <div class="org-content">
                     <img src="assets/mediator.png" alt="The Mediator Logo">
                     <div class="org-info">
-                        <p>Beberapa Foto Ketika</p>
-                        <p>Wisida Tahfidz Murid -</p>
-                        <p>Murid SMP Negeri 1</p>
-                        <p>Cibadak</p>
+                        <p>The Mediator is the official student publication of the College of Communication - West Visayas State University Main Campus. We do hereby abide the Republic Act No. 7079, or the "Campus Journalism Act of 1991". We live with the truth and justice, bearing the core of HOPS: Humility, Objectivity, Passion, and Service.</p>
                         <a href="#">Learn More</a>
                     </div>
                 </div>
@@ -220,8 +214,6 @@
                 <h3>Menu</h3>
                 <ul>
                     <li><a href="order.html">Orders</a></li>
-                    <li><a href="feedback.html">Feedback</a></li>
-                    <li><a href="processingLogs.html">Processing Logs</a></li>
                     <li><a href="aboutUs.html">About Us</a></li>
                 </ul>
             </div>
