added: org descriptions

--- a/client/index.html
+++ b/client/index.html
@@ -156,10 +156,7 @@
                 <div class="org-content">
                     <img src="assets/studiositas.png" alt="Studiositas Logo">
                      <div class="org-info">
-                        <p>Beberapa Foto Ketika</p>
-                        <p>Wisida Tahfidz Murid -</p>
-                        <p>Murid SMP Negeri 1</p>
-                        <p>Cibadak</p>
+                        <p>Studiositas Honor Society is an organization for the Academic Achievers of West Visayas State University College of Communication. Our vision is to continually inspire students to excel, empowering them to become effective instruments for societal advancement in the future. We are committed to instilling a strong sense of academic distinction and ethical standards among communication students, preparing them to be leaders who uphold the highest ideals of integrity and excellence.</p>
                         <a href="#">Learn More</a>
                     </div>
                 </div>
@@ -170,10 +167,8 @@
                 <div class="org-content">
                     <img src="assets/devcom.png" alt="DCS Logo">
                      <div class="org-info">
-                        <p>Beberapa Foto Ketika</p>
-                        <p>Wisida Tahfidz Murid -</p>
-                        <p>Murid SMP Negeri 1</p>
-                        <p>Cibadak</p>
+                        <p>WVSU Development Communicators’ Society is an independent student-led organization composed of DevCom students at West Visayas State University.
+The organization aims to mirror out the values of Development Communication of being PRAGMATIC, PURPOSIVE, and VALUE-LADEN, and equip its members with essential, technical, and necessary skills and experiences to bring the margin to the center.</p>
                         <a href="#">Learn More</a>
                     </div>
                 </div>
