fix: minor changes to the sc description

--- a/client/aboutUs.html
+++ b/client/aboutUs.html
@@ -72,7 +72,7 @@
                  <div class="content-box">
                     <h3>College of Communication Student Council</h3>
                     <ol>
-                        <li>The College of Communication Student Council (COC SC) represents the College of - Communication students, advocating for their needs and rights. It fosters responsible - student engagement, provides a platform for student voices, champions academic freedom, strives for educational reform, promotes unity, and cultivates social awareness and national consciousness.</li>
+                        The College of Communication Student Council (COC SC) represents the College of - Communication students, advocating for their needs and rights. It fosters responsible - student engagement, provides a platform for student voices, champions academic freedom, strives for educational reform, promotes unity, and cultivates social awareness and national consciousness.
                     </ol>
                 </div>
             </div>
