--- a/client/checkout.html
+++ b/client/checkout.html
@@ -79,8 +79,8 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="programYear">Program Year & Section</label>
-                            <input type="text" id="programYear" name="programYear" placeholder="Enter Program Year & Section" required>
+                            <label for="programYear">Program, Year & Section</label>
+                            <input type="text" id="programYear" name="programYear" placeholder="Enter Program, Year & Section" required>
                         </div>
 
                         <h3>Payment method</h3>
