add: calendar of activities

--- a/client/index.html
+++ b/client/index.html
@@ -104,8 +104,8 @@
                     <div class="legend-item"><span class="color-box event-day"></span> EVENT</div>
                     <div class="legend-item"><span class="color-box today"></span> DATE TODAY</div>
                 </div>
-                <a href="assets/COCSC_Calendar.pdf" download class="calendar-download-link">
-                    COCSC Calendar of Activities 25-26
+                <a href="assets/COC CALENDAR OF ACTIVITIES 25-26.pdf" download class="calendar-download-link">
+                    COC Calendar of Activities 25-26
                 </a>
             </div>
         </div>
