added time and date for the modal

--- a/client/index.html
+++ b/client/index.html
@@ -241,6 +241,7 @@ The organization aims to mirror out the values of Development Communication of b
         <div class="modal-content">
             <button class="modal-close-btn" aria-label="Close announcement">×</button>
             <h2 id="modal-title">Modal Title</h2>
+            <p id="modal-datetime" class="modal-datetime"></p>
             <p id="modal-body">Modal body text goes here.</p>
         </div>
     </div>
